fix(profile): Fix css to working status on mobile version

--- a/src/components/profile/ProfileStyleMobile.css
+++ b/src/components/profile/ProfileStyleMobile.css
@@ -19,6 +19,14 @@ and (min-width : 320px) {
     margin-bottom: 16px;
   }
 
+  .profile_working_status {
+    text-align: center;
+  }
+
+  .profile_isworked {
+    font-size: 14px;
+  }
+
   .profile_infos {
     width: 100%;
   }
